css/style.css
/* ... */
/* The sticky */
header {
  /* position: -webkit-sticky; */
  position: sticky; 
  top: 0;
  z-index: 5;
} 

/* more code for sticky nav this will come from JS */
/* .sticky {
  position: fixed;
  top: 0;
} */



/* list elemtns displayed as inline-block = displayed horizontally next to each other */
.main-nav li{
  display: inline-block; 
}

/* style to each <a> */
.main-nav li a{
  text-decoration: none;
  padding: .5em;
  margin: 2em;
  color: rgb(255,255,255)
  
}

/* Style to each nav item when current */
.main-nav li a.current{
  text-decoration: none;
  text-align: right;
  font-weight: bold;
  color: rgb(95,222,57);
}

/* Style to each nav item when hover over */
.main-nav li a:hover,a:focus{
  border-bottom: 1px solid white;
}





.bckgimg{
  max-width: 100%;
  height: auto;
}


.about-slmkt{  
  display: block;
  padding: 2em;
  font-size: 16px;
  line-height: 1.3em;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
  color: rgb(35, 35, 115);

}

.about-slmkt h1{
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
  color: rgb(35, 35, 115);
  font-size: 20px
}

/* ADDING CALLOUT. 
PARTS OF THIS CODE WERE TAKEN FROM W3SCHOOLS EXAMPLE BUT I MODIFIED SOME FEATURES.
E.G. THERE IS ONLY ONE BOX (CONTAINER) INSTEAD OF TWO. AND ADDED SOME STYLING TO MAKE IT MATCH WITH MY PAGE */

.callout {
  position: fixed;
  /* last line forces the callout box to stay visible in the lower corner */
  top: 475px;
  right: 20px;
  width: 400px;
  height: 150px;
  margin-left: 20px;
  max-width: 300px;
  border-radius: 25px;
  border-style: solid;
  border-color: #0b06f5;
  border-width: 4px;
  /* background-color:rgb(95,222,57); */
  background-color: rgb(95,222,57);
  
}

/* .callout p{
  font-size: 24px;
  color: #0b06f5;
  text-align: left;
} */

/* .callout-header {
  padding: 25px 15px;
  background: #555;
  font-size: 30px;
  color: white;
} */

.callout-container {
  padding: 15px;
  margin-top: 15px;
  margin-left: 10px;
  /* background-color: #ccc; */
  font-size: 24px;
  color: #0b06f5;
  align-content: center;
  align-self: center;
}

.closebtn {
  position: absolute;
  top: 5px;
  right: 15px;
  color: black;
  font-size: 20px;
  cursor: pointer;
}

.closebtn:hover {
  color: white;
}
/* THIS MEDIA QUERY IS TO MAKE THE CALLOUT DISAPPEAR ON MOBILE DEVICES */
@media only screen and (max-width: 1024px){
  .callout{
    display: none;
  }
}

/* CSS FOR CALL OUT ENDS HERE  */



.statement{
  display: grid;
  grid-template-columns: 50% 50%;
  /* align-items: center; */
  /* justify-items: center; */
  margin: 3%;
  height: 68vh;
}


/* CODE FOR FLIPCARD */
  /* USED CODE FROM HERE: https://www.w3schools.com/howto/howto_css_flip_card.asp */

  
  .flip-card {
    padding: 2em;
    align-self: center;
    justify-self: center;
    background-color: transparent;
    width: 500px;
    height: 331px;
    perspective: 1000px;
  }

  .flip-card img{
    width: 100%;   
    /* justify-self: center; */
    /* align-self: center; */
  }


  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  }

  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }

  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 60%;
    backface-visibility: hidden;
  }

  .flip-card-front {
    background-color: #bbb;
    color: black;
    z-index: 2;
  }

  .flip-card-back {
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 24px;
    font-weight: bold;
    padding-top: 5em;
    background-color: white;
    /* background-color: #0b06f5; */
    color: #0b06f5;;
    transform: rotateY(180deg);
    z-index: 1;
  }

  #hide {
    display: none;
  }
  /* FLIP CARD CODE ENDS HERE */

/* stops flip card in responsive */
@media only screen and (max-width: 1024px){
  .flip-card:hover .flip-card-inner {
    transform: rotateY(0deg);
  }

  
  .flip-card {
    display: none;
 }

 #hide {
   display: inline;
 }

 .statement{
   /* display: grid; */
   grid-template-columns: auto;
 }

 

}


.objectives{
  padding: 4%;
  align-self: center;
  justify-self: center;
  line-height: 1.5em;
  font-family: Helvetica;
  width: 85%;

}

/* font-family: 'Heebo', sans-serif; */
/* COME BACK TO THIS CODE LATER TO ADD ACCORDION */

.accordion {
  
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  margin: 9px;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  
}



.active, .accordion:hover{
  
  background-color: #ccc;
}

.panel {
  padding: 0 18px;
  background-color: white;
  display: none;
  overflow: hidden;
}


/* ACCORDION ENDS HERE */





.brand{
  display: flex;
  align-items: center;
  margin: 12%;
  height: 100vh;
}

/* .marca{
  padding: 10%;
  line-height: 1.5em;
  font-family: Helvetica;
  background: black url("../images/athlete.jpg");
  background-size: 75%;
  background-repeat: no-repeat;
  background-position: center;  
}

.marca p, h3{
  width: 45%;
  color:white;
  text-shadow: 2px 2px 2px rgb(170, 170, 170);
  text-align: justify;
  padding-left: 5%;
  padding-right: 5%;
} */



/* ADDING CODE FOR MODAL BUTTON IN MENU PAGE */


#myBtn{
  display: inline-block;
  padding: 1.5em;
  margin-left: 30px;
  margin-bottom: 50px;
  border: 12px;
  max-width: 20%;
  border-style: solid;
  border-color: rgb(95,222,57);
  box-shadow: 5px 10px 18px #0b06f5;
  background-color: white;
  border-radius: 50%;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 3vh;
  font-weight: bold;
  color: #0b06f5;
  cursor: pointer;
    
}

.modal{
  display: none;
  max-width: 20%;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 3vh;
  font-weight: bold;
  color: black;
  
}

.modal-content img{
  max-width: 100%;
} 
/* ... */

